# chrome-ext-learners-dictionary

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile.toml  README.md  background.js  clean.sh  content-script.js  helper.js  manifest.json  rust-toolchain.toml  sidepanel.css  sidepanel.html  sidepanel.js  tailwind.config.js  tailwind.css  tailwind.debug.js
.cargo/: config.toml
.fleet/: run.json
.run/: Build.run.xml  Clean.run.xml  Test.run.xml
src/: lib.rs  model.rs  storage_global.rs  storage_props.rs
src/storage/: add.rs  add_folder.rs  add_word.rs  delete_by_id.rs  delete_word.rs  export_data.rs  get_by_id.rs  get_folders.rs  get_store.rs  get_transaction.rs  get_word_by_id.rs  get_words.rs  import_data.rs  mod.rs  open.rs  storage_error.rs  store_index.rs
src/storage/tests/: add_folders_and_words_test.rs  add_word_test.rs  delete_word_test.rs  export_data_test.rs  get_folders_test.rs  get_words_test.rs  import_data_test.rs  mod.rs  storage_open_test.rs  store_index_test.rs
src/ui/: add_folder_form.rs  add_word_form.rs  error_message.rs  export_data.rs  folders.rs  icons.rs  import_data.rs  mod.rs  navigation.rs  page_length.rs  pager.rs  search_form.rs  settings.rs  show_copyright.rs  show_folder.rs  show_word.rs  utils.rs  words.rs
