[package]
name = "dictionary"
version = "0.1.2"
authors = ["Oleg Okhotnikov <dict.chext@gmail.com>"]
edition = "2021"
publish = false
description = "an extension for Google Chrome to manage bookmarks for learner's dictionaries"
repository = "https://github.com/olegnet/chrome-ext-learners-dictionary"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.5.6", features = ["web"] }
dioxus-core = "0.5.6"
dioxus-web = "0.5.6"
dioxus-std =  { version = "0.5.0", features = ["storage"] }

dioxus-tailwindcss = "0.7.0"
dioxus-daisyui = "0.7.0"

# https://react-icons.github.io/react-icons/
dioxus-free-icons = { version = "0.8.6", features = [
    "material-design-icons-action",
    "material-design-icons-editor",
    "material-design-icons-file",
    "material-design-icons-navigation",
    "feather",
] }

wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
gloo-utils = { version = "0.2.0", features = ["serde"] }

chrono = "0.4.38"
num-traits = { version = "0.2.19", default-features = false }
rexie = "0.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.122"
thiserror = "1.0.63"
futures-util = "0.3.30"
lazy_static = "1.5.0"

# https://docs.rs/console_log/1.0.0/console_log/
cfg-if = "1.0.0"
log = { version = "0.4.22" }
console_log = { version = "1.0.0", optional = true }

# https://github.com/rustwasm/console_error_panic_hook
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "console",
    "Window",
    "StorageManager",
    "Navigator",
    "Storage",
    "Node",
    "Url",
    "FilePropertyBag",
]

[features]
web_sys_unstable_apis=[]
default = [
    "console_error_panic_hook",
#    "console_log",
]

[dev-dependencies]
# https://rustwasm.github.io/wasm-bindgen/wasm-bindgen-test/browsers.html
# https://googlechromelabs.github.io/chrome-for-testing/
wasm-bindgen-test = "0.3.42"
#pretty_assertions = "1.4.0"

# https://rustwasm.github.io/docs/book/reference/debugging.html
# https://dioxuslabs.com/learn/0.5/cookbook/optimizing
[profile.release]
#debug = true
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

# TODO https://rustwasm.github.io/wasm-pack/book/cargo-toml-configuration.html
#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false
