[package]
name = "dictionary"
version = "0.1.4"
authors = ["Oleg Okhotnikov <dict.chext@gmail.com>"]
edition = "2021"
publish = false
description = "an extension for Google Chrome to manage bookmarks for learner's dictionaries"
repository = "https://github.com/olegnet/chrome-ext-learners-dictionary"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.6.3", features = ["web"] }
dioxus-sdk = { version = "0.6.0", features = ["storage"] }

#dioxus-tailwindcss = "0.8.0"
dioxus-daisyui = "0.8.0"

# https://react-icons.github.io/react-icons/
dioxus-free-icons = { version = "0.9.0", features = [
    "material-design-icons-action",
    "material-design-icons-editor",
    "material-design-icons-file",
    "material-design-icons-navigation",
    "feather",
] }

wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
gloo-utils = { version = "0.2.0", features = ["serde"] }

chrono = "0.4.40"
rexie = "0.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.139"
thiserror = "1.0.63"
futures-util = "0.3.31"
lazy_static = "1.5.0"

# added because of Dependabot warning
idna = "1.0.3"

# https://docs.rs/console_log/1.0.0/console_log/
cfg-if = "1.0.0"
log = { version = "0.4.26" }
console_log = { version = "1.0.0", optional = true }

# https://github.com/rustwasm/console_error_panic_hook
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
    "Window",
    "StorageManager",
    "Navigator",
    "Storage",
    "Node",
    "Url",
    "FilePropertyBag",
]

[features]
web_sys_unstable_apis=[]
default = [
    "console_error_panic_hook",
    "console_log",
]

[dev-dependencies]
# https://rustwasm.github.io/wasm-bindgen/wasm-bindgen-test/browsers.html
# https://googlechromelabs.github.io/chrome-for-testing/
wasm-bindgen-test = "0.3.50"
#pretty_assertions = "1.4.0"

# https://rustwasm.github.io/docs/book/reference/debugging.html
# https://dioxuslabs.com/learn/0.5/cookbook/optimizing
[profile.release]
#debug = true
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

# TODO https://rustwasm.github.io/wasm-pack/book/cargo-toml-configuration.html
#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false
